fix mms popover jumping

--- a/Code/courseai/static/css/style.css
+++ b/Code/courseai/static/css/style.css
@@ -482,7 +482,7 @@ wrapper {
     max-width: 400px;
 }
 
-.course-popover .popover-body {
+.course-popover .popover-body, .mms-popover .popover-body {
     height: 420px;
     overflow-y: scroll;
 }
